# nearby

./: .bazelrc  .gitignore  .gitmodules  README.md  WORKSPACE
cpp/analytics/: BUILD  analytics_recorder.cc  analytics_recorder_test.cc
cpp/base/: BUILD  check.h  stringprintf.cc  stringprintf.h
cpp/cal/api/: BUILD  ble.h
cpp/cal/base/: BUILD
cpp/cal/public/: BUILD  ble.cc  ble.h  ble_test.cc
cpp/core/: BUILD  core.cc  listeners.h  options.h  params.h  payload.h  strategy.h
cpp/core/internal/: BUILD  BUILD.bazel  base_endpoint_channel.cc  base_endpoint_channel_test.cc  base_pcp_handler.cc  base_pcp_handler.h  base_pcp_handler_test.cc  bluetooth_bwu_handler.cc  bwu_manager.cc  client_proxy.cc  client_proxy.h  encryption_runner_test.cc  endpoint_channel_manager.cc  endpoint_manager.cc  endpoint_manager.h  endpoint_manager_test.cc  internal_payload_factory_test.cc  offline_frames.cc  offline_frames_test.cc  offline_frames_validator.cc  offline_frames_validator_test.cc  p2p_cluster_pcp_handler.cc  payload_manager.cc  pcp_handler.h  service_controller_router.h  webrtc_bwu_handler.cc  wifi_lan_bwu_handler.cc
cpp/core/internal/mediums/: BUILD  BUILD.bazel  ble.cc  utils.h  webrtc.cc  webrtc.h
cpp/core/internal/mediums/ble_v2/: BUILD  advertisement_read_result.cc
cpp/core/internal/mediums/webrtc/: BUILD  connection_flow.cc  signaling_frames.h  webrtc_socket.cc
cpp/nearby/: BUILD  framework.h  interop.cpp  main.cpp
cpp/platform/api/: BUILD  platform.h  webrtc.h
cpp/platform/base/: BUILD  base_input_stream.h  base_pipe.h  cancellation_flag.h  feature_flags.h  input_stream.h  logging.h
cpp/platform/impl/g3/: BUILD
cpp/platform/public/: BUILD  ble.cc  bluetooth_classic.cc  file.h  settable_future.h  wifi_lan.cc
proto/: BUILD  connections_enums.proto  discovery_enums.proto  nearby_client_enums.proto  sharing_enums.proto
proto/analytics/: BUILD  connections_log.proto
proto/connections/: BUILD
proto/errorcode/: BUILD
proto/mediums/: BUILD
solution/: NearbyConnections.sln
solution/NearbyConnections/: NearbyConnections.cpp  NearbyConnections.sln  NearbyConnections.vcxproj  NearbyConnections.vcxproj.filters
solution/NearbyConnections/NearbyConnections/: NearbyConnections.cpp  NearbyConnections.vcxproj
solution/NearbyConnectionsWindows/: Defines.props  Includes.props  NearbyConnectionsWindows.vcxproj  NearbyConnectionsWindows.vcxproj.filters  interop.cpp  interop.h
solution/NearbyCoreApp/: App.cpp  NearbyCoreApp.vcxproj  Package.appxmanifest  readme.txt
solution/NearbyLibrary/: BaseEventArgs.idl  ConnectionAcceptedEventArgs.cpp  ConnectionAcceptedEventArgs.h  ConnectionAcceptedEventArgs.idl  ConnectionBandwidthChangedEventArgs.cpp  ConnectionBandwidthChangedEventArgs.h  ConnectionBandwidthChangedEventArgs.idl  ConnectionDisconnectedEventArgs.cpp  ConnectionDisconnectedEventArgs.h  ConnectionDisconnectedEventArgs.idl  ConnectionInitiatedEventArgs.cpp  ConnectionInitiatedEventArgs.h  ConnectionInitiatedEventArgs.idl  ConnectionOptions.cpp  ConnectionOptions.h  ConnectionOptions.idl  ConnectionRejectedEventArgs.cpp  ConnectionRejectedEventArgs.h  ConnectionRejectedEventArgs.idl  ConnectionResponseInfo.cpp  ConnectionResponseInfo.h  ConnectionResponseInfo.idl  EndpointDistanceChangedEventArgs.cpp  EndpointDistanceChangedEventArgs.h  EndpointDistanceChangedEventArgs.idl  EndpointFoundEventArgs.cpp  EndpointFoundEventArgs.h  EndpointFoundEventArgs.idl  EndpointLostEventArgs.cpp  EndpointLostEventArgs.h  EndpointLostEventArgs.idl  Enums.idl  Medium.idl  MediumSelector.cpp  MediumSelector.h  MediumSelector.idl  Nearby Precompiled Static.props  Nearby.cpp  Nearby.h  Nearby.idl  (+21 more)
windows/: core_adapter.cc
(+36 files in other folders)
